[package]
name = "sctp-async"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "Async implementation for the SCTP protocol"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sctp-async"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sctp"
keywords = ["sctp"]
categories = [ "network-programming", "asynchronous" ]
workspace = ".."
readme = "../README.md"

[dependencies]
bytes = "1.1.0"
futures-util = { version = "0.3.11", default-features = false, features = ["io"] }
futures-channel = "0.3.11"
fxhash = "0.2.1"
proto = { package = "sctp-proto", path = "../sctp-proto", version = "0.1.1" }
thiserror = "1.0.21"
tracing = "0.1.10"
tokio = { version = "1.15.0", features = ["rt", "time"] }

[dev-dependencies]
tokio-test = "0.4.2"
lazy_static = "1.4.0"
clap = "2.33.3"

[[example]]
name = "ping"
path = "examples/ping.rs"
bench = false

[[example]]
name = "pong"
path = "examples/pong.rs"
bench = false
